Basic styling done

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -31,3 +31,23 @@ code {
 .redoButton {
   color: rgb(255, 115, 0);
 }
+
+.buttonRow {
+  padding-top: 2vh;
+}
+
+.listRow {
+  padding-top: 2vh;
+}
+
+.inputRow {
+  padding-top: 2vh;
+}
+
+.inputItem {
+  height: 3.5vh;
+}
+
+#listSelect {
+  width: max-content;
+}
